Добавил google fonts

--- a/pg/Index.html
+++ b/pg/Index.html
@@ -6,6 +6,9 @@
   <title>CTF Проект</title>
   <link rel="stylesheet" href="../style/style.css">
   <link rel="icon" type="image/png" href="../src/logo.jpg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
