--- a/pg/Index.html
+++ b/pg/Index.html
@@ -15,11 +15,9 @@
     <h1> <img src="../src/logo.jpg" class="logo">Anakta CTF</h1>
     <nav>
       <ul>
-        <li><a href="../html/Index.html">Главная</a></li>
-        <li><a href="../html/about.html">О проекте</a></li>
-        <li><a href="../html/journal.html">Журнал</a></li>
-        <li><a href="../html/members.html">Участники</a></li>
-        <li><a href="../html/resources.html">Ресурсы</a></li>
+        <li><a href="../pg/Index.html">Главная</a></li>
+        <li><a href="../pg/forum.html">Ресурсы</a></li>
+        <li><a href="../pg/login.html">Вход</a></li>
       </ul>
     </nav>
   </header>
