--- a/pg/Index.html
+++ b/pg/Index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
-</head>
+</head> 
 <body>
   <header>
     <h1> <img src="../src/logo.jpg" class="logo">Anakta CTF</h1>
@@ -17,6 +17,8 @@
       <ul>
         <li><a href="../pg/Index.html">Главная</a></li>
         <li><a href="../pg/forum.html">Ресурсы</a></li>
+        <li><a href="../pg/about.html">О проекте</a></li>
+        <li><a href="../pg/journal.html">Журнал</a></li>
         <li><a href="../pg/login.html">Вход</a></li>
       </ul>
     </nav>
