--- a/pg/forum.html
+++ b/pg/forum.html
@@ -17,6 +17,8 @@
       <ul>
         <li><a href="../pg/Index.html">Главная</a></li>
         <li><a href="../pg/forum.html">Ресурсы</a></li>
+        <li><a href="../pg/about.html">О проекте</a></li>
+        <li><a href="../pg/journal.html">Журнал</a></li>
         <li><a href="../pg/login.html">Вход</a></li>
       </ul>
     </nav>
@@ -76,12 +78,6 @@
             <label for="message">Текст сообщения:</label>
             <textarea id="message" name="message" rows="5" required></textarea>
           </div>
-          
-          <div class="form-group">
-            <label for="attachment">Вложения:</label>
-            <input type="file" id="attachment" name="attachment">
-          </div>
-          
           <div class="form-group">
             <label class="checkbox-label">
               <input type="checkbox" name="consent" required>
