--- a/pg/about.html
+++ b/pg/about.html
@@ -17,6 +17,7 @@
         <li><a href="../pg/forum.html">Ресурсы</a></li>
         <li><a href="../pg/about.html">О проекте</a></li>
         <li><a href="../pg/journal.html">Журнал</a></li>
+        <li><a href="../pg/services.html">Курсы</a></li>
         <li><a href="../pg/login.html">Вход</a></li>
       </ul>
     </nav>
