Добавил страничку мои заказы

--- a/pg/services.html
+++ b/pg/services.html
@@ -17,6 +17,7 @@
                 <li><a href="../pg/about.html">О проекте</a></li>
                 <li><a href="../pg/journal.html">Журнал</a></li>
                 <li><a href="../pg/services.html">Курсы</a></li>
+                <li><a href="../pg/orders.html">Мои заказы</a></li>
                 <li><a href="../pg/login.html">Вход</a></li>
             </ul>
         </nav>
